name:                talklicker
version:             0.1.0.0
synopsis:            Plan talks and projects
description:         Please see README.md
homepage:            https://github.com/jsdw/talklicker
license:             BSD3
license-file:        LICENSE
author:              James Wilson
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable talklicker-exe
  ghc-options:         -Wall
                       -fno-warn-type-defaults
                       -fno-warn-unused-do-bind
                       -fno-warn-orphans
  hs-source-dirs:      app
  main-is:             Main.hs
  default-extensions:  FlexibleInstances,
                       OverloadedStrings,
                       ScopedTypeVariables,
                       RecordWildCards,
                       RankNTypes
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , data-default
                     , servant-server
                     , warp
                     , bytestring
                     , transformers
                     , mtl
                     , cryptonite
                     , bytestring
                     , containers
                     , wai
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jsdw/talklicker
